syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "akkaserverless/annotations.proto";
import "wirelessmeshdomain.proto";

package geolocation.subscription;

option java_outer_classname = "SubscriptionApi";

service SubscriptionService {
  rpc ForwardCustomerLocationAdded(wirelessmeshdomain.CustomerLocationAdded) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      topic: "wirelessmesh";
    };
  }

  rpc ForwardCustomerLocationRemoved(wirelessmeshdomain.CustomerLocationRemoved) returns (google.protobuf.Empty) {
      option (akkaserverless.method).eventing.in = {
        topic: "wirelessmesh";
      };
    }

  rpc CatchOthers(google.protobuf.Any) returns (google.protobuf.Empty) {
    option (akkaserverless.method).eventing.in = {
      topic:  "wirelessmesh"
    };
  }
}
